[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paranoic-scan"
version = "0.1.0"
description = "Web security assessment tool for self-auditing web applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.0",
    "types-requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
    "pip-api",
    "types-requests",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
    "types-requests",
]
all = ["paranoic-scan[dev,test,lint]"]

[project.scripts]
paranoic-scan = "paranoic_scan.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/paranoic-scan"
Repository = "https://github.com/daedalus/paranoic-scan"
Issues = "https://github.com/daedalus/paranoic-scan/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/paranoic_scan"]

[tool.hatch.build.targets.sdist]
include = ["src/paranoic_scan"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN", "TCH"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-branch --cov-fail-under=70"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/paranoic_scan/__main__.py"]

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]